// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should collapse correctly 1`] = `
<li
  className="CRUD-nav__group"
>
  <div
    alignText="left"
    className="CRUD-nav__group-button"
    icon={
      <Unknown
        isGroup={true}
      />
    }
    minimal={true}
    onClick={[Function]}
    rightIcon="small-plus"
    text=""
  />
  <div
    isOpen={false}
  >
    <ul
      className="CRUD-nav__list"
    >
      <li
        className="CRUD-nav__item"
      >
        <div
          boundary="window"
          content={
            <Unknown
              id={2}
              layer={
                Object {
                  "name": "layerFoo",
                }
              }
              minified={true}
              name="Foo"
              order={1}
              pictogram={null}
            />
          }
          interactionKind="hover"
          position="left"
        >
          <div
            src={null}
          >
            NavIcon
          </div>
        </div>
      </li>
      <li
        className="CRUD-nav__item"
      >
        <div
          boundary="window"
          content={
            <Unknown
              id={4}
              layer={
                Object {
                  "name": "layerBar",
                }
              }
              minified={true}
              name="Bar"
              order={4}
              pictogram="path/to/image.png"
            />
          }
          interactionKind="hover"
          position="left"
        >
          <div
            src="path/to/image.png"
          >
            NavIcon
          </div>
        </div>
      </li>
    </ul>
  </div>
</li>
`;

exports[`should snapshot correctly 1`] = `
<li
  className="CRUD-nav__group"
>
  <div
    alignText="left"
    className="CRUD-nav__group-button"
    icon={
      <Unknown
        isGroup={true}
      />
    }
    minimal={true}
    onClick={[Function]}
    rightIcon="small-plus"
  />
  <div
    isOpen={false}
  >
    <ul
      className="CRUD-nav__list"
    >
      <li
        className="CRUD-nav__item"
      >
        <div />
      </li>
      <li
        className="CRUD-nav__item"
      >
        <div />
      </li>
    </ul>
  </div>
</li>
`;
